# grokgw

./: .gitignore  AGENTS.md
.claude/plans/: antibot_test_plan.md
DrissionPage/: UPSTREAM.md  pyproject.toml
antibot/: hardened_options.py  monitor.py  run_detect.py  run_detect2.py  run_hardened.py  run_hardened2.py  run_monitor.py  run_takeover.py  stealth.js  stealth_min.js
antibot/report/: detect_result.json  detect_result_hardened.json  monitor_result.json
antibot/reports/: summary.md
antibot/tests/: test_agents_md.py  test_reports.py  test_stealth_and_attach.py
docs/: ROADMAP.md  STATUS.md
docs/research/: 2026-07-15-apple-account-email-provider-matrix.md  2026-07-15-grok-session-recap.md  2026-07-16-opencode-ses_09ab-handoff.md  2026-07-17-xpage-structure-audit.md
grokgw/: .dockerignore  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml
grokgw/deploy/: README-remote-proxy.md  grokgw-proxy.service  remote-proxy.env.example
grokgw/grokgw/: __main__.py  auth.py  config.py  errors.py  grok_runner.py  mapping.py  media.py  models.py  proxy_runner.py  sandbox.py  server.py
grokgw/tests/: conftest.py  test_auth.py  test_config.py  test_grok_runner.py  test_mapping.py  test_media.py  test_models.py  test_proxy_runner.py  test_sandbox.py  test_server.py
runtime/: __main__.py  audit.py  browser.py  cli.py  models.py  paths.py  ports.py  risk.py  runner.py  scheduler.py  schema.sql  session.py  store.py
runtime/tasks/: __init__.py  healthcheck.py  local_storage_mark.py  login_probe.py
runtime/tests/: ACCEPTANCE.md  test_risk.py  (+6 more)
(+7 files in other folders)
